--- a/index.htm
+++ b/index.htm
@@ -32,17 +32,17 @@
 <p class="auto-style1">fund our projects best use of money ever not scam 100% </p>
 <p class="auto-style1">&nbsp;</p>
 <p class="auto-style1" style="width: 277px; height: 40px; color: #660066; background-color: #000000;">
-<a href="file:///C:/Users/NUN0014/Documents/My%20Web%20Sites/Untitled_1.html">
+<a href="Untitled_1.html">
 why are we doing this</a> </p>
 <p class="auto-style2" style="height: 166px; background-color: #000000; width: 244px;">
-<img alt="" height="52" src="file:///C:/Users/NUN0014/Downloads/thump.png" width="54" /><a href="file:///C:/Users/NUN0014/Documents/My%20Web%20Sites/dog.html">our projects 
+<img alt="" height="52" src="thump.png" width="54" /><a href="dog.html">our projects 
 have an ultimate goal to achive this goal we will need donations for these&nbsp;&nbsp; 
 projects to worck for more info please&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 procead further&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </p>
 
 <p>
-<img alt="" height="159" src="file:///C:/Users/NUN0014/Downloads/donate.png" width="869" /></p>
+<img alt="" height="159" src="donate.png" width="869" /></p>
 <p>&nbsp;</p>
 <p><a href="https://www.youtube.com/watch?v=dbGjdRnaog8">
 https://www.youtube.com/watch?v=dbGjdRnaog8</a> </p>
