--- a/index.htm
+++ b/index.htm
@@ -35,14 +35,14 @@
 <a href="Untitled_1.html">
 why are we doing this</a> </p>
 <p class="auto-style2" style="height: 166px; background-color: #000000; width: 244px;">
-<img alt="" height="52" src="thump.png" width="54" /><a href="dog.html">our projects 
+<img alt="" height="52" src="/thump.png" width="54" /><a href="/dog.html">our projects 
 have an ultimate goal to achive this goal we will need donations for these&nbsp;&nbsp; 
 projects to worck for more info please&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 procead further&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </p>
 
 <p>
-<img alt="" height="159" src="donate.png" width="869" /></p>
+<img alt="" height="159" src="/donate.png" width="869" /></p>
 <p>&nbsp;</p>
 <p><a href="https://www.youtube.com/watch?v=dbGjdRnaog8">
 https://www.youtube.com/watch?v=dbGjdRnaog8</a> </p>
