--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p class="auto-style1">fund our projects best use of money ever not scam 100% </p>
 <p class="auto-style1">&nbsp;</p>
 <p class="auto-style1" style="width: 277px; height: 40px; color: #660066; background-color: #000000;">
-<a href="Untitled_1.html">
+<a href="https://pixel-fy.com/tacos-website/Untitled_1.html">
 why are we doing this</a> </p>
 <p class="auto-style2" style="height: 166px; background-color: #000000; width: 244px;">
 <img alt="" height="52" src="https://pixel-fy.com/tacos-website/thump.png" width="54" /><a href="https://pixel-fy.com/tacos-website/dog.html">our projects 
